GNOME Bugzilla – Bug 684241
PAM prompts at unlock screen are in wrong locale
Last modified: 2012-09-18 14:09:58 UTC
GDM currently doesn't properly set the users environment variables in reauth sessions so we don't show unlock prompts in the right locale. See https://mail.gnome.org/archives/gnome-shell-list/2012-September/msg00096.html
Created attachment 224546 [details] [review] worker: Copy environment from login session to reauth sessions Reauthentication sessions depend on having the same environment as the session they were initiated from. This is important to make sure login prompts are in the right language, to make sure the kerberos credentials cache is looked up, and for various other reasons. This commit copies the environment from the login session to any new reauthentication sessions that get started after login.
(untested patch, will test it shortly)
I did some testing and reworked the patch. The following fixes have been pushed: 6d5dd09 worker: Copy environment from login session to reauth sessions dfce196 worker: correct debug messages
Created attachment 224553 [details] [review] worker: Copy environment from login session to reauth sessions Reauthentication sessions depend on having the same environment as the session they were initiated from. This is important to make sure login prompts are in the right language, to make sure the kerberos credentials cache is looked up, and for various other reasons. This commit copies the environment from the login session to any new reauthentication sessions that get started after login.
Created attachment 224554 [details] [review] worker: correct debug messages The conversation-started message said "stopped" and the conversation-stopped message said "started" This commit flips 'em.
(see https://mail.gnome.org/archives/gnome-shell-list/2012-September/msg00096.html for the thread that prompted this bug)
oh i already said that in comment 0