worker: correct debug messages

The conversation-started message said "stopped" and the
conversation-stopped message said "started"

This commit flips 'em.

https://bugzilla.gnome.org/show_bug.cgi?id=684241